Contenu txt et alignement correct index + ajout page contact

--- a/all.css
+++ b/all.css
@@ -113,9 +113,18 @@ p{
     height: auto;
 }
 
+.Principal{
+    display: flex;
+    justify-content: space-between;
+}
+
+
 .Principal p{
+    display: block;
     text-align: justify;
-    margin-top: 3cm;
+    margin-top: 4.2cm;
+    width: 30%;
+    margin-bottom: 15%;
 }
 
 
@@ -222,7 +231,7 @@ footer{
     width: 100%;
     height: 100%;
     position: static;
-    margin-left: -10px;
+    margin-left:-1%;
     margin-bottom: -10px;
     justify-content: space-between;
     flex-direction: row;
@@ -234,7 +243,7 @@ footer{
     width: 200px;
     height: 50px;
     margin-top: 15px;
-    margin-left: 8%;
+    margin-left: 3%;
     margin-bottom: 20px;
     font-style: italic;
     text-align: justify;
@@ -242,7 +251,7 @@ footer{
 
 #Contact{
     display: inline;
-    margin-right: 8%;
+    margin-right: 3%;
 }
 
 h2{
@@ -250,7 +259,9 @@ h2{
 }
 
 
-
+footer a{
+    text-decoration: none;
+}
 
 
 
